--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@tamagui/config": "^1.121.3",
     "@tamagui/image-next": "^1.121.3",
     "@tamagui/lucide-icons": "^1.121.3",
+    "@tamagui/toast": "^1.121.4",
+    "@uploadcare/upload-client": "^6.14.2",
     "@vxrn/color-scheme": "1.1.374",
     "better-sqlite3": "^11.2.1",
+    "burnt": "^0.12.2",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.30.1",
     "drizzle-orm": "^0.38.3",
